Get hosts and permissions right.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,10 @@
 [defaults]
 gathering=False
 retry_files_enabled=False
+inventory=inventory
 
 [ssh_connection]
 ssh_args=-o ForwardAgent=yes
+
+[privilege_escalation]
+become=False
