Use full paths for symlinks.

--- a/roles/exuberant-ctags/tasks/main.yml
+++ b/roles/exuberant-ctags/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: "Symlink exuberant-ctags configuration"
   file:
-    src: "ctags"
+    src: "{{ roles }}/exuberant-ctags/files/ctags"
     dest: "{{ home }}/.ctags"
     state: "link"
     force: True
