--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -2,13 +2,13 @@
 - name: "Make sure the SSH configuration folder is created"
   file:
     path: "{{ home }}/.ssh"
-    state: directory
-    mode: 0755
+    state: "directory"
+    mode: "0755"
     owner: "{{ ansible_user }}"
 
 - name: "Symlink the SSH configuration"
   file:
-    src: "config"
+    src: "{{ roles }}/ssh/files/config"
     dest: "{{ home }}/.ssh/config"
     state: "link"
     force: True
