Use the correct full paths.

--- a/roles/msmtp/tasks/main.yml
+++ b/roles/msmtp/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: "Symlink the msmtp configuration"
   file:
-    src: "msmtprc"
+    src: "{{ roles }}/msmtp/files/msmtprc"
     dest: "{{ home }}/.msmtprc"
     state: "link"
     force: True
